refactor(search): use Math.clamp for recent item limit